--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,7 +168,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:fontFamily="@font/neo3"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center"
             android:letterSpacing="-0.05"
             app:layout_constraintTop_toTopOf="@id/btn_study"
@@ -177,6 +177,20 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/guideline6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="15sp"
+        android:letterSpacing="-0.05"
+        android:text="@string/login_already"
+        android:textColor="@color/main1"
+        android:fontFamily="@font/neo3"
+        android:textStyle="bold" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -212,4 +226,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.72" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.83" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
