--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".ThreeFragment">
+    tools:context=".IntroduceThreeFragment">
 
     <ImageView
         android:layout_gravity="center"
