--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".IntroduceOneFragment">
+    tools:context=".introduce.IntroduceOneFragment">
 
     <ImageView
         android:layout_gravity="center"
