--- a/app/src/main/res/layout/fragment_main_address_book.xml
+++ b/app/src/main/res/layout/fragment_main_address_book.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainAddressBookFragment">
+    tools:context=".main.MainAddressBookFragment"
+    android:id="@+id/mainAddressBookFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,3 +17,4 @@
         android:text="주소 프래그먼트 입니다." />
 
 </FrameLayout>
+</layout>
