--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".IntroduceTwoFragment">
+    tools:context=".introduce.IntroduceTwoFragment">
 
     <ImageView
         android:layout_gravity="center"
